<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_rack_image">Image of shoes</string>
    <string name="login_text">Please login to access our store</string>
    <string name="email_hint">user@trainersexpress.com</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Signup</string>
    <string name="title_text">Welcome to our store!</string>
    <string name="sub_title_text">Shop for all the latest styles!</string>
    <string name="start_shopping">Start shopping</string>
    <string name="instructions_title">Shop with us</string>
    <string name="instructions_sub_title">Use the button below to start shopping with us. You\'ll find all our collections next!</string>
    <string name="choose_a_shoe">Choose your shoe</string>
    <string name="shoe_store_text">Shoe Store</string>
    <string name="add_shoe_text">Add shoe</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="save">Save shoe</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="store_title">Trainers Express \n\ Store Inventory</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="shoe_list">%1$s %2$s %3$.1f %4$s</string>
    <string name="logout_menu_text">Logout</string>
    <string name="shoe_name_text">Show name</string>
    <string name="shoe_company_text">Shoe company</string>
    <string name="shoe_size_text">Shoe size</string>
    <style name="shoe_description_text">Shoe description</style>
</resources>
